; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_utils.c_ccnet_locale_to_utf8.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_utils.c_ccnet_locale_to_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ccnet_locale_to_utf8(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %21

11:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32* null, i32** %6, align 8
  store i8* null, i8** %7, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = call i8* @g_locale_to_utf8(i8* %12, i32 %14, i32* %4, i32* %5, i32** %6)
  store i8* %15, i8** %7, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store i8* null, i8** %2, align 8
  br label %21

19:                                               ; preds = %11
  %20 = load i8*, i8** %7, align 8
  store i8* %20, i8** %2, align 8
  br label %21

21:                                               ; preds = %19, %18, %10
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i8* @g_locale_to_utf8(i8*, i32, i32*, i32*, i32**) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
